--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,10 @@
   <div class="row">
     <div class="col-md-12">
       <app-recipes></app-recipes>
+    </div>
+    <div class="col-md-5">
       <app-shopping-list></app-shopping-list>
+
     </div>
   </div>
 </div>
