--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,1 +1,7 @@
 @import url(https://unpkg.com/@webpixels/css@1.0/dist/index.css);
+.navbar-brand{
+    font-size: 1.5rem;
+}
+.navbar .nav-item{
+    font-size: 1rem;
+}
