--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3">
-  <div class="container-xl">
+  <div class="container-fluid">
     <!-- Logo -->
     <a class="navbar-brand" href="#">
          Recipe Book
@@ -14,9 +14,6 @@
       <div class="navbar-nav mx-lg-auto">
         <a class="nav-item nav-link active" href="#" aria-current="page">Recipes</a>
         <a class="nav-item nav-link" href="#">Shopping List</a>
-      </div>
-      <!-- Right navigation -->
-      <div class="navbar-nav ms-lg-4">
         <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Manage
@@ -26,6 +23,10 @@
             <li><a class="dropdown-item" href="#">Fetch Data</a></li>
           </ul>
         </div>
+      </div>
+      <!-- Right navigation -->
+      <div class="navbar-nav ms-lg-4">
+        
       </div>
   
     </div>
