--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12">
-      <img src="" alt="" class="img-responsive">
+      <img [src]="recipe.imagePath" style="max-height: 30vh;border-radius: 10px;" alt="{{recipe.name}}" class="img-responsive mb-3">
     </div>
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <h1>Recipe Name</h1>
+      <h1>{{recipe.name}}</h1>
     </div>
   </div>
   <div class="row my-4">
@@ -25,7 +25,7 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      Description
+      {{recipe.description}}
     </div>
   </div>
   <div class="row">
