--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,8 +14,8 @@
       <div class="navbar-nav mx-lg-auto">
         <a class="nav-item nav-link active"  (click)="onSelect('recipe')" aria-current="page">Recipes</a>
         <a class="nav-item nav-link" (click)="onSelect('shopping-list')">Shopping List</a>
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="nav-item dropdown"appDropdown>
+          <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Manage
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
