--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-xl-10">
-        <app-shopping-edit (ingrediantCreated)="oningrediantAdded($event)"></app-shopping-edit>
+        <app-shopping-edit></app-shopping-edit>
     </div>
     <hr>
     <ul class="list-group">
