--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,7 +15,7 @@
             Manage Recipe
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">To Shopping List</a></li>
+            <li><a class="dropdown-item" (click)="AddedToShoppingList()">To Shopping List</a></li>
             <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
             <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
         </ul>
@@ -28,9 +28,15 @@
       {{recipe.description}}
     </div>
   </div>
-  <div class="row">
+  <div class="row my-3">
     <div class="col-xs-12">
-      Ingredients
+      <ul class="list-group" 
+      *ngFor="let ingredient of recipe.ingredients"
+      >
+        <li class="list-group-item mb-1">
+           {{ingredient.name}} - {{ingredient.amount}}
+        </li>
+      </ul>
     </div>
   </div>
   
