--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,9 +7,8 @@
 <div class="row mt-3">
     <div class="col-md-12">
         <app-recipe-item 
-        *ngFor="let recipeEl of Recipes"
+        *ngFor="let recipeEl of recipes"
         [recipe]="recipeEl"
-        (onRecipeSelected)="onRecipeSelect(recipeEl)"
         ></app-recipe-item>
     </div>
 </div>
